--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 #node modules
 the-bot/node_modules/
 
+#.env
+.env
+the-bot/.env
+
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
