--- a/the-bot/package.json
+++ b/the-bot/package.json
@@ -8,6 +8,7 @@
     "acorn-walk": "^8.3.4",
     "arg": "^4.1.3",
     "create-require": "^1.1.1",
+    "deepl-node": "^1.19.1",
     "diff": "^4.0.2",
     "discord-api-types": "^0.38.28",
     "discord.js": "^14.22.1",
